test/errors/error6.base
Invalid character '#' 
fun foo() {
   _ = 1 # 3;
         ^
